# wdi-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: build.yml
libwdi-sys/: Cargo.toml  build.rs  installer_path.patch  installer_types_mismatches.patch  static_windows_error_str.patch  winusb_only.patch  wrapper.h
libwdi-sys/src/: bindings.rs  lib.rs
src/: error.rs  lib.rs
