[package]
name = "wdi"
description = "Rust library for interacting with the Windows Driver Installer subsystem."
version = "0.1.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blackmagic-debug/wdi-rs"
edition = "2021"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[dependencies]
libwdi-sys = { path = "libwdi-sys", version = "0.1.3", features = [] }
winapi = { version = "0.3.9", features = ["setupapi"] }
bstr = "1.6.0"

[features]
default = ["enable-x86", "enable-arm64"]
# Run bindgen at build time instead of using the already-generated bindings. Requires libclang on the system.
dynamic-bindgen = ["libwdi-sys/dynamic-bindgen"]
# Enable ARM64 target compilation
enable-arm64 = ["libwdi-sys/enable-arm64"]
# Enable x86 (32-bit) target compilation
enable-x86 = ["libwdi-sys/enable-x86"]
# Enable libusb0 (libusb-win32) support
libusb0 = ["libwdi-sys/libusb0"]
# Enable libusbK support
libusbk = ["libwdi-sys/libusbk"]
