[package]
name = "libwdi-sys"
version = "0.1.0"
edition = "2021"
links = "wdi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Run bindgen at build time instead of using the already-generated bindings. Requires libclang on the system.
dynamic-bindgen = []

[build-dependencies]
bindgen = "0.60.1"
cc = "1.0.73"
diffy = "0.2.2"
env_logger = "0.9.1"
log = { version = "0.4.17", features = ["std"] }
winapi = "0.3.9"
