[package]
name = "libwdi-sys"
description = "FFI bindings for libwdi."
version = "0.1.1"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blackmagic-debug/wdi-rs"
edition = "2021"
links = "wdi"
categories = ["os::windows-apis"]

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = []

[features]
# Run bindgen at build time instead of using the already-generated bindings. Requires libclang on the system.
dynamic-bindgen = []
make-installer-arm64 = []

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.80"
diffy = "0.3.0"
env_logger = "0.10.0"
log = { version = "0.4.19", features = ["std"] }
winapi = "0.3.9"
